--- a/notifications.html
+++ b/notifications.html
@@ -448,6 +448,7 @@
       }
 
       // Render notifications
+      // ولك مشان jesus زبط هون
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
@@ -455,8 +456,8 @@
           container.innerHTML = `
             <div class="empty-state">
               <i class="fa-solid fa-bell-slash"></i>
-              <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
+            
+              <h3>الرجاء الانتطار</h3>
             </div>`;
           return;
         }
