--- a/notifications.html
+++ b/notifications.html
@@ -456,8 +456,8 @@
           container.innerHTML = `
             <div class="empty-state">
               <i class="fa-solid fa-bell-slash"></i>
-            
-              <h3>الرجاء الانتطار</h3>
+              <h3>لا توجد إشعارات</h3>
+              <p>لم يتم العثور على أي حجوزات</p>
             </div>`;
           return;
         }
