--- a/offers.html
+++ b/offers.html
@@ -80,6 +80,7 @@
         color: #aaa;
       }
 
+      /* ✅ Preview styling */
       .image-preview {
         width: 150px;
         height: 150px;
@@ -184,8 +185,81 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
     <script>
+      // 🔑 Supabase configuration
+      const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
+      const SUPABASE_KEY =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
+      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+      // 🔐 Login logic
+      async function login() {
+        const email = document.getElementById("email").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        const { data } = await supabase
+          .from("admin_auth")
+          .select("*")
+          .eq("email", email)
+          .eq("password", password)
+          .maybeSingle();
+
+        if (data) {
+          document.getElementById("loginScreen").style.display = "none";
+          document.getElementById("dashboardContent").style.display = "block";
+          localStorage.setItem("clinic_logged_in", "true");
+        } else {
+          document.getElementById("errorMsg").style.display = "block";
+        }
+      }
+
+      function logout() {
+        localStorage.removeItem("clinic_logged_in");
+        document.getElementById("loginScreen").style.display = "flex";
+        document.getElementById("dashboardContent").style.display = "none";
+      }
+
+      if (localStorage.getItem("clinic_logged_in") === "true") {
+        document.getElementById("loginScreen").style.display = "none";
+        document.getElementById("dashboardContent").style.display = "block";
+      }
+
+      // 🌙 Theme toggle
+      const themeToggle = document.getElementById("themeToggle");
+      themeToggle.addEventListener("click", function () {
+        document.body.classList.toggle("dark");
+        const icon = themeToggle.querySelector("i");
+        if (document.body.classList.contains("dark")) {
+          icon.classList.replace("fa-moon", "fa-sun");
+          localStorage.setItem("clinic_theme", "dark");
+        } else {
+          icon.classList.replace("fa-sun", "fa-moon");
+          localStorage.setItem("clinic_theme", "light");
+        }
+      });
+      if (localStorage.getItem("clinic_theme") === "dark") {
+        document.body.classList.add("dark");
+        const icon = themeToggle.querySelector("i");
+        icon.classList.replace("fa-moon", "fa-sun");
+      }
+
+      // 🖼️ Preview image before upload
+      const offerImage = document.getElementById("offerImage");
+      const imagePreview = document.getElementById("imagePreview");
+      offerImage.addEventListener("change", () => {
+        const file = offerImage.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            imagePreview.src = e.target.result;
+            imagePreview.style.display = "block";
+          };
+          reader.readAsDataURL(file);
+        } else {
+          imagePreview.style.display = "none";
+        }
+      });
+
       // 🚀 Send offer
       async function sendOffer() {
         const title = document.getElementById("offerTitle").value.trim();
@@ -209,16 +283,11 @@
 
             if (error) throw error;
 
-            // ✅ Use signed URL (no redirect)
-            const { data: signedUrlData, error: signedErr } =
-              await supabase.storage
-                .from("offers")
-                .createSignedUrl(uniqueName, 60 * 60 * 24); // 24h
+            const { data: urlData } = supabase.storage
+              .from("offers")
+              .getPublicUrl(uniqueName);
 
-            if (signedErr) throw signedErr;
-            imageUrl = signedUrlData.signedUrl;
-
-            console.log("✅ Uploaded Image Signed URL:", imageUrl);
+            imageUrl = urlData.publicUrl;
           } catch (err) {
             console.error("❌ Image upload error:", err.message);
             alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
@@ -226,17 +295,15 @@
         }
 
         try {
-          const phone = "962785050875"; // ✅ WhatsApp number (with country code)
+          const phone = "962785050875"; // ✅ Replace with recipient phone number
 
           const payload = {
             name: "Smile Clinic",
             phone: phone,
             service: title,
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
-            image: imageUrl, // include if exists
+            image: imageUrl,
           };
-
-          console.log("📦 Sending payload:", payload);
 
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
@@ -248,8 +315,6 @@
           );
 
           const data = await res.json();
-          console.log("📩 Response:", data);
-
           if (data.success) {
             alert("✅ تم إرسال العرض بنجاح!");
           } else {
